<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_skip" />

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/introduction"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/img_board"
        app:layout_constraintStart_toStartOf="@id/img_board"
        app:layout_constraintTop_toBottomOf="@id/img_board" />

    <TextView
        android:id="@+id/tv_ntroduction"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tv_introduction"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gone_started"
        android:visibility="gone"
        android:layout_width="wrap_content"
        app:cornerRadius="8dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_ntroduction"
        app:layout_constraintStart_toStartOf="@+id/tv_ntroduction"
        app:layout_constraintTop_toBottomOf="@id/tv_ntroduction" />

</androidx.constraintlayout.widget.ConstraintLayout>