<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfilerFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@color/design_default_color_secondary_variant"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        tools:ignore="RedundantNamespace" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="26sp"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:hint="@string/print_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_print_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_set"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/set_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>